--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ configparser==5.0.1
 cryptography @ file:///C:/ci/cryptography_1607637849569/work
 Flask==1.1.2
 Flask-MonitoringDashboard==3.0.6
+gunicorn==20.0.4
 idna @ file:///tmp/build/80754af9/idna_1593446292537/work
 itsdangerous==1.1.0
 Jinja2==2.11.2
