--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,15 @@
-APScheduler==3.6.3
-brotlipy==0.7.0
-certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1606255208697/work
-chardet @ file:///C:/ci/chardet_1607690654534/work
-click==7.1.2
-colorhash==1.0.2
-configparser==5.0.1
-cryptography @ file:///C:/ci/cryptography_1607637849569/work
+
 Flask==1.1.2
-Flask-MonitoringDashboard==3.0.6
 gunicorn==20.0.4
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-itsdangerous==1.1.0
 Jinja2==2.11.2
-joblib @ file:///tmp/build/80754af9/joblib_1607970656719/work
-kiwisolver==1.1.0
-kneed==0.5.1
 MarkupSafe==1.1.1
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-numpy @ file:///C:/ci/numpy_and_numpy_base_1603466732592/work
-pandas @ file:///C:/ci/pandas_1609008050392/work
-psutil==5.7.2
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-PySocks @ file:///C:/ci/pysocks_1605287845585/work
-python-dateutil==2.8.1
-pytz @ file:///tmp/build/80754af9/pytz_1608922264688/work
-regexp==0.1
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-scikit-learn @ file:///C:/ci/scikit-learn_1598377018496/work
-scipy @ file:///C:/ci/scipy_1604596260408/work
-six @ file:///C:/ci/six_1605187374963/work
-sklearn==0.0
-SQLAlchemy==1.3.19
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tzlocal==2.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1606938623459/work
 Werkzeug==1.0.1
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306167264/work
-wincertstore==0.2
-xgboost==0.90
-zipp==2.0.1
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn>=0.18
+pandas>=0.19
+urllib3==1.25.9
+requests==2.23.0
+jsonschema==3.2.0
+urllib3==1.25.9
+pickleshare==0.7.5
